css/custom.css
/* ... */
.upload-btn-wrapper input[type=file] {
  font-size: 100px;
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
}

.upload-btn-wrapper:hover .btn {
    color: orange;
    border: 2px solid orange;
}

.modal-body .form-control {
    border: none;
    border-bottom: 1px solid #ced4da;
    border-radius: 0;
    background: #EEEEEE;
}

.modal-body label {
    text-transform: uppercase;
    font-weight: 300;
}

@media (min-width: 1200px) {
  .container {
      max-width: 1350px;
  }
}
@media (max-width: 992px) {
  #masthead .card-body {
    text-align: center!important;
  }
  #masthead i {
    margin: 1rem auto;
  }

  #masthead h5.card-title.text-uppercase {
    margin: 1rem auto;
  }

  #masthead .second h5.card-title.text-uppercase,
  #masthead .third h5.card-title.text-uppercase {
    margin: auto;
    text-indent: 0;
  }
  #masthead .card-footer a {
    width: 132%;
    margin: -13px 0px 0px -20px;
  }
  #masthead .main-stats {
    display: block!important;
    position: relative;
    top: 10px;
  }
  #masthead .card.m-5 {
    margin: 1rem!important;
  }
  
  #why h4 {
    font-size: 2rem;
  } 
}
@media (max-width: 768px) {
  #why small, #unique small {
      max-width: 100%!important;
  }
  
  #unique-paindlik .col, #unique-tulevikuoskused .col,
  #unique-interditsiplinaarne .col{
      margin-top: 1rem;
  }

}

@media (max-width: 830px) {
  .scrollUp  {
    display: none;
  }

}

.alert {
  border-radius: 0;
}


.cropper-bg {
    background-image: none!important;
}

.dropzone .dz-preview.dz-image-preview {
    background: transparent;
    margin: 0;
}

.dropzone {
    min-height: 210px;
    border: 1px solid rgba(0, 0, 0, 0.3);
    border: none;
    background: #eeeeee;
    padding: 20px 20px;
    border-bottom: 1px solid #ddd;
}

.dropzone .dz-preview .dz-image {
  border-radius: 0;
  margin: auto;
  width: 100%;
  margin-bottom: 1rem;
  height: auto;
}

.dropzone {
    min-height: 210px;
    border: 2px solid rgba(0, 0, 0, 0.3);
    border: none;
    background: #eeeeee;
    border-bottom: 1px solid #ced4da;
    padding: 20px 20px;
}

.dz-default.dz-message {
    height: 170px;
    display: table-cell;
    vertical-align: middle;
}
.alert-dismissible .close {
  padding: 0.55rem 1.25rem;
}

.btn {
  font-family: "Rubik";
}

.custom-control.custom-checkbox {
  text-align: center;

}
.custom-control.custom-checkbox label.custom-control-label {
  padding-top: 5px;
}

.modal #submit-all {
    width: 220px;
    margin-left: calc(50% - 110px);
}
.cropper-overlay {
  position : fixed;
  left : 0;
  right: 0;
  top : 0;
  bottom : 0;
  z-index : 99999;
  background : #000;
}
.btn-cropper-overlay {
  position : absolute;
  width : 100px;
  left : calc(50% - 50px);
  bottom : 50px;
  z-index : 99999;
}

@media (max-width: 1200px) {
    i.unique-arrow {
        background-size: 150%;
        background-position: 300px 100px!important;
        height: 60px;
    }
}

@media (max-width: 992px) {
    i.unique-arrow {
        background-size: 484px;
        background-position: 452px 156px!important;
        height: 100px!important;
    }
    .unique-box .col.p-3 {
        min-height: 350px;
    }
    #unique-tulevikuoskused .col{
        margin-top: 0rem;
    }

    #unique-paindlik .col{
        margin-top: 2rem;
    }

}

@media (max-width: 768px) {
    i.unique-arrow {
        background-size: 484px;
        background-position: 420px 156px!important;
        height: 100px;
    }
    .unique-box .col.p-3 {
        min-height: inherit;
      margin-top:1rem!important;
    }
    .unique-box .col span {
      position: inherit;
      padding: 0;
    }

  #why h2 span, #unique h2 span, h1 {
    font-size: 10vw!important;
  }

}


a.page-link {
    background: transparent;
    border: none;
    font-family: "Rubik";
    font-weight: 600;
    color: #00489d!important;
}

.page-item.active .page-link {
    color: #ff5622!important;
    background: none;
}


a.page-link[aria-label=Next]:after {
    content: " ";
    background: url(../img/icons.png);
    height: 35px;
    width: 22px;
    display: block;
    margin: auto;
    margin-left: 14px;
    position: absolute;
    background-position: -166px 51px;
    top: 1px;
}

a.page-link[aria-label=Next] span {
    display: none;
}


a.page-link[aria-label=Previous]:after {
    content: " ";
    background: url(../img/icons.png);
    height: 35px;
    width: 22px;
    display: block;
    margin: auto;
    margin-left: -34px;
    position: absolute;
    background-position: -152px 50px;
    top: 1px;
}

a.page-link[aria-label=Previous] span {
    display: none;
}

a.page-link[aria-label=Previous]:hover,
a.page-link[aria-label=Next]:hover {
  background: none;
  border: none;
}

a.page-link[aria-label=Previous]:hover:after,
a.page-link[aria-label=Next]:hover:after {
  transform: scale(1.1);
}

.carousel-item {
    margin-top: 2rem;
}


#validated .bg-container {
    top: -488px;
    left: 48%;
}

#validated section.page-section {
    padding: 3rem 0;
}
#validated header {
    height: 62vh;
}

a.nav-link.lang-switch {
  display: none;
}

.navbar-light .navbar-toggler {
  border: none;
}

.practice .front p, .practice .back p {
    margin: 0;
}

.practiceoffers .col-lg-12.practiceoffer:first-child {
    border: none;
}

.practiceoffers .col-lg-12.practiceoffer {
    border-top: 2px solid #01499d;
    padding: 30px 0;
}


@media (max-width: 410px) {
    div#ut-logo {
      /*width: 230px;
        background-size: 184% auto!important;*/
    }
}

footer .socialmedia a{
  color:#46454a!important;
  transition: .25s all ease-in-out;
}

footer .socialmedia a:hover {
  opacity: .7;
  color: #e94700!important;
}


div#viewModal h5, div#viewModal h2 {
    text-transform: uppercase;
    font-size: 1rem;
    padding: 6px 12px;
    margin-left: -12px;
    font-weight: 300;
    margin-bottom: 0;
}

div#viewModal h2 {
 font-weight:600!important;
 font-size: 1.25rem!important;
}
/* ... */

